# BCI_management_system

./: .qmake.stash  Icon.qrc  Login.qrc  Makefile  Makefile.Debug  Makefile.Release  README.md  allmatcurve.cpp  allmatcurve.h  allmatcurve.ui  bcicode1.pro  bcicode1.pro.user.420be4b  bcicode1.pro.user.ebab128  gamefinishwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mati.cpp  mati.h  maxcuve.rar  qml.qrc  readme.txt  register_info.ui  ui_attentionradar.h  ui_attentionwidget.h  ui_curve.h  ui_dialog.h  ui_gamefinishwidget.h  ui_login.h  ui_mainwindow.h  ui_matCurve.h  ui_radar.h  ui_register.h  ui_register_info.h  userInfo.json
.qtc_clangd/: compile_commands.json
MAT/: CMakeLists.txt  CMakeLists.txt.user.479d0a7  ttt.mat
MAT/src/: mat.cpp  mat.h
MAT/test/: CMakeLists.txt  main.cpp
attentionwidget/: attentiondata.cpp  attentiondata.h  attentionradar.cpp  attentionradar.h  attentionradar.ui  attentionwidget.cpp  attentionwidget.h  attentionwidget.ui
bcicode1/: bcicode1.pro  bcicode1.pro.user.d1b7a86  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res1.qrc
config/: Fp2config.ini
curvegroup/CurveWnd/: CMakeLists.txt  CMakeLists.txt.user.479d0a7  CMakeLists.txt.user.b3d04a2
curvegroup/CurveWnd/maxwidget/: CMakeLists.txt
curvegroup/CurveWnd/maxwidget/CurveProperty/: CMakeLists.txt
curvegroup/CurveWnd/maxwidget/CurveProperty/qtpropertybrowser/: qtpropertybrowserutils_p.h  qtvariantproperty.h
curvegroup/CurveWnd/maxwidget/CurveProperty/src/: curveconfig.cpp  curveconfig.h  curveproperty.cpp  curveproperty.h
curvegroup/CurveWnd/maxwidget/CurveProperty/test/: CMakeLists.txt  mainmax.cpp
curvegroup/CurveWnd/maxwidget/src/: maxwidget.cpp  maxwidget.h  qcustomplot.cpp  qcustomplot.h
curvegroup/CurveWnd/maxwidget/test/: CMakeLists.txt  main.cpp
curvegroup/CurveWnd/src/: curvewnd.cpp  curvewnd.h  mark.cpp  mark.h  series.cpp  series.h  seriesdata.cpp  seriesdata.h
curvegroup/CurveWnd/test/: CMakeLists.txt  lib_test.cpp
debug/: moc_attentiondata.cpp  moc_attentionradar.cpp  moc_attentionwidget.cpp  moc_curve.cpp  moc_curveconfig.cpp  moc_curvegroup.cpp  moc_curveproperty.cpp  moc_curvewnd.cpp  moc_dialog.cpp  moc_gamefinishdata.cpp  moc_gamefinishwidget.cpp  moc_jsonoperation.cpp  moc_login.cpp  moc_mainwindow.cpp  moc_mark.cpp  moc_mat.cpp  moc_matCurve.cpp  moc_maxwidget.cpp  moc_predefs.h  moc_qcustomplot.cpp  moc_qtbuttonpropertybrowser.cpp  moc_qteditorfactory.cpp  moc_qtgroupboxpropertybrowser.cpp  moc_qtpropertybrowser.cpp  moc_qtpropertybrowserutils_p.cpp  moc_qtpropertymanager.cpp  moc_qttreepropertybrowser.cpp  moc_qtvariantproperty.cpp  moc_radar.cpp  moc_register.cpp  moc_register_info.cpp  moc_seriesdata.cpp  qrc_pic.cpp  qrc_qml.cpp  qrc_qtpropertybrowser.cpp
gamefinfishwidget/: curve.cpp  curve.h  curve.ui  gamefinishdata.cpp  gamefinishwidget.cpp  gamefinishwidget.h  gamefinishwidget.ui  radar.cpp  radar.h
gamefinishwidget/: curve.cpp  gamefinishdata.cpp  radar.h  (+6 more)
(+2437 files in other folders)
